# SimpleWebServer

./: CMakeLists.txt  LICENSE  README.md  main.cpp
Http/: CMakeLists.txt  HttpParser.cpp  HttpParser.hpp
Networking/: CMakeLists.txt  NetworkStream.cpp  NetworkStream.hpp  TcpListener.cpp  TcpListener.hpp
Server/: CMakeLists.txt  Server.cpp  Server.hpp
Tests/: CMakeLists.txt
Tests/UnitTests/: HelloWorldTest.cpp  HttpParserTest.cpp  NetworkingTest.cpp
Utils/: CMakeLists.txt  Utils.cpp  Utils.hpp
Worker/: CMakeLists.txt  Worker.cpp  Worker.hpp
